--- a/config/locales/mainpage.en.yml
+++ b/config/locales/mainpage.en.yml
@@ -26,3 +26,4 @@ en:
       read_article_btn_html_title: "Переглянути статтю повністю"
       news_title: "новини"
       news_btn: "всі новини"
+      read_new_html_title: "Прочитати новину"
