--- a/config/locales/calculator.uk.yml
+++ b/config/locales/calculator.uk.yml
@@ -1,2 +1,17 @@
 uk:
   calculator:
+    title: "калькулятор"
+    explanation: |
+      <p class="smaller">Вказаний калькулятор дозволяє вирахувати теоретичну вагу решіткового настилу та навантаження (розподілене і зосереджене), яке вказаний настил здатний сприймати. Всі розрахунки відповідають таблицям навантажень решіткового настилу, які Ви можете знайти на сайті та в каталозі <a>«Решітковий настил»</a></p>
+    attention: "Зверніть увагу, що тип антикорозійного захисту впливає на вагу решіткового настилу."
+    static_label_1: "Виберіть тип решітки"
+    static_label_2: "Введіть розрахункові дані"
+    input_label_1: "Товщина несучої стіни"
+    input_label_2: "Висота несучої стіни"
+    input_label_3: "Крок несучих смуг"
+    input_label_4: "Крок поперечного прутка"
+    input_label_5: "Антикорозійний захист"
+    calculate: "порахувати"
+  calculator_btn: "калькулятор"
+  calculator_html_title: "Скористайтесь калькулятором та розрахуйте вартість нашої продукції та послуг"
+  additional_details: "Якщо у Вас виникли запитання, або за більш детальним розрахунком, звертайтесь у наш інженерний центр за телефоном:"
