--- a/config/locales/mainpage.uk.yml
+++ b/config/locales/mainpage.uk.yml
@@ -6,8 +6,8 @@ uk:
       corporate-label:
         abbreviation: "zrn"
         full-name: "Завод решіткового настилу"
-      intro: "Eдине підприємство в Україні, що займається виробництвом виключно решіткового настилу. Оскільки, на відміну від конкурентів, це наш єдиний напрямок діяльності, можемо сміливо твердити:
-        p.bold Про решітковий настил ми знаємо все!"
+      intro: "Eдине підприємство в Україні, що займається виробництвом виключно решіткового настилу. Оскільки, на відміну від конкурентів, це наш єдиний напрямок діяльності, можемо сміливо твердити:"
+      slogan: "Про решітковий настил ми знаємо все!"
       btn_title: "про нас"
       btn_html_title: "Дізнайтесь про нас більше"
     section_titles:
