result field inside calculator

--- a/config/locales/form.en.yml
+++ b/config/locales/form.en.yml
@@ -7,3 +7,6 @@ en:
     input_field_3: "Номер телефону"
     input_field_4: "Додаткові побажання"
     btn: "надіслати"
+  success:
+    title: "Ваше повідомлення успішно надіслане"
+    subtitle: "Дякуюємо, найближчим часом оператор зв’яжеться з вами"
