vecancie popup done

--- a/config/locales/calculator.uk.yml
+++ b/config/locales/calculator.uk.yml
@@ -15,3 +15,11 @@ uk:
   calculator_btn: "калькулятор"
   calculator_html_title: "Скористайтесь калькулятором та розрахуйте вартість нашої продукції та послуг"
   additional_details: "Якщо у Вас виникли запитання, або за більш детальним розрахунком, звертайтесь у наш інженерний центр за телефоном:"
+  result:
+    title: "Результат обрахунку"
+    result_field_1: "Вага решітки"
+    result_field_2: "Розподільше навантаження на м2, Fv"
+    result_field_3: "Прогин решітки від розподіленого навантаження, fv"
+    result_field_4: "Зосереджене навантаження на ділянку 200х200 мм, Fp"
+    result_field_5: "Прогин решітки від розподіленого навантаження, fp"
+    reset_field: "Очистити поля"
