--- a/config/locales/form.uk.yml
+++ b/config/locales/form.uk.yml
@@ -1,9 +1,14 @@
 uk:
   form:
     title: "Напишіть нам"
+    title_2: "Надіслати резюме"
     required_label: "* Обов'язкові поля"
     input_field_1: "Ваше ім'я *"
     input_field_2: "Електронна скринька *"
     input_field_3: "Номер телефону"
     input_field_4: "Додаткові побажання"
+    input_field_5: "Кілька слів про Вас..."
     btn: "надіслати"
+  success:
+    title: "Ваше повідомлення успішно надіслане"
+    subtitle: "Дякуюємо, найближчим часом оператор зв’яжеться з вами"
