--- a/config/locales/form.en.yml
+++ b/config/locales/form.en.yml
@@ -9,6 +9,7 @@ en:
     input_field_4: "Додаткові побажання"
     input_field_5: "Кілька слів про Вас..."
     btn: "надіслати"
+    attach_file: "Прикріпити резюме"
   success:
     title: "Ваше повідомлення успішно надіслане"
     subtitle: "Дякуюємо, найближчим часом оператор зв’яжеться з вами"
