calculator in progress

--- a/config/locales/calculator.en.yml
+++ b/config/locales/calculator.en.yml
@@ -12,6 +12,7 @@ en:
     input_label_4: "Крок поперечного прутка"
     input_label_5: "Антикорозійний захист"
     calculate: "порахувати"
+    error_message: "Будь ласка, заповніть всі поля"
   calculator_btn: "калькулятор"
   calculator_html_title: "Скористайтесь калькулятором та розрахуйте вартість нашої продукції та послуг"
   additional_details: "Якщо у Вас виникли запитання, або за більш детальним розрахунком, звертайтесь у наш інженерний центр за телефоном:"
