general changes: links, locales, styling

--- a/config/locales/calculator.en.yml
+++ b/config/locales/calculator.en.yml
@@ -4,6 +4,8 @@ en:
     explanation: |
       <p class="smaller">Вказаний калькулятор дозволяє вирахувати теоретичну вагу решіткового настилу та навантаження (розподілене і зосереджене), яке вказаний настил здатний сприймати. Всі розрахунки відповідають таблицям навантажень решіткового настилу, які Ви можете знайти на сайті та в каталозі <a>«Решітковий настил»</a></p>
     attention: "Зверніть увагу, що тип антикорозійного захисту впливає на вагу решіткового настилу."
+    radio_name_1: "Зварна"
+    radio_name_2: "Пресована"
     static_label_1: "Виберіть тип решітки"
     static_label_2: "Введіть розрахункові дані"
     input_label_1: "Товщина несучої стіни"
