--- a/config/locales/components.uk.yml
+++ b/config/locales/components.uk.yml
@@ -55,3 +55,22 @@ uk:
   not_found:
     main_text: "На жаль сторінку не знайдено"
   terms_of_use: "правила користування сайтом"
+  categories:
+    category_1: "Зварний решітковий настил"
+    category_2: "Пресований решітковий настил"
+    category_3: "Сходи"
+    category_4: "Кріплення"
+    category_5: "Просічно витяжний лист"
+    category_6: "Розробка КМД"
+    category_7: "Решітковий настил «serrated»"
+  technical-quide-list:
+    name_1: "Таблиця навантажень зварного настилу"
+    name_2: "Таблиця навантажень пресованого настилу"
+    name_3: "Способи укладки решіток"
+    name_4: "Типи обрамлення"
+    name_5: "Способи кріплення настилу"
+    name_6: "Таблиця ваги решіткового настилу"
+    name_7: "Допуски та відхилення"
+    name_8: "Параметри сходинок"
+    name_9: "Приклади розкладки настилу"
+    name_10: "Решітки з зубами протиковазання"
