added two fields in calc

--- a/config/locales/calculator.en.yml
+++ b/config/locales/calculator.en.yml
@@ -8,11 +8,13 @@ en:
     radio_name_2: "Пресована"
     static_label_1: "Виберіть тип решітки"
     static_label_2: "Введіть розрахункові дані"
-    input_label_1: "Товщина несучої стіни"
-    input_label_2: "Висота несучої стіни"
+    input_label_1: "Товщина несучої смуги"
+    input_label_2: "Висота несучої смуги"
     input_label_3: "Крок несучих смуг"
     input_label_4: "Крок поперечного прутка"
-    input_label_5: "Антикорозійний захист"
+    input_label_5: "Довжина решітки"
+    input_label_6: "Ширина решітки"
+    input_label_7: "Антикорозійний захист"
     calculate: "порахувати"
     error_message: "Будь ласка, заповніть всі поля"
   calculator_btn: "калькулятор"
