calculator in progress

--- a/config/locales/calculator.en.yml
+++ b/config/locales/calculator.en.yml
@@ -8,6 +8,10 @@ en:
     radio_name_2: "Пресована"
     static_label_1: "Виберіть тип решітки"
     static_label_2: "Введіть розрахункові дані"
+    field_label_1: "Оберіть параметр"
+    field_label_2: "Вкажіть довжину решітки"
+    field_label_3: "Вкажіть ширину решітки"
+    field_label_4: "Виберіть тип захисту"
     input_label_1: "Товщина несучої смуги"
     input_label_2: "Висота несучої смуги"
     input_label_3: "Крок несучих смуг"
